@@ -1,5 +1,9 @@
 2010-12-11  H.J. Lu  <hjl.tools@gmail.com>
 
+	* binutils-lto-mixed-1.patch: Initialize header.next to NULL.
+
+2010-12-11  H.J. Lu  <hjl.tools@gmail.com>
+
 	* binutils-lto-mixed-1.patch: New file. Replace ...
 	* binutils-2stage-5.patch: This. Removed.
 	* README: Likewise.
